For fixing strange code text size on mobile Safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2576,6 +2576,19 @@ footer {
 	-webkit-overflow-scrolling: touch;
 }
 
+@media(max-width:500px) {
+	.article-content .highlight .rouge-code pre,
+	.article-content .highlight .code pre {
+		font-size: 10px !important;
+	}
+
+	.article-content .highlight .rouge-gutter pre.lineno,
+	.article-content .highlight .gutter pre.lineno {
+		font-size: 10px !important;
+	}
+
+}
+
 .article-content .highlight .rouge-gutter,
 .article-content .highlight .gutter {
 	-moz-user-select: none;
@@ -2607,18 +2620,22 @@ article .article-content img.emoji {
 	margin: 0em 0.2em 0.25em 0.2em;
 }
 
-@media only screen and (min-width:1024px)
-.github-card {
-	width: 100%;
-	float: none;
-	margin: 1em 0 0;
+@media only screen and (min-width:1024px) {
+	.github-card {
+		width: 100%;
+		float: none;
+		margin: 1em 0 0;
+	}
+
 }
 
-@media only screen and (min-width:768px)
-.github-card {
-	width: 45%;
-	float: left;
-	margin: 0 5% 0 0;
+@media only screen and (min-width:768px) {
+	.github-card {
+		width: 45%;
+		float: left;
+		margin: 0 5% 0 0;
+	}
+
 }
 
 .github-card {
